--- a/ant/self-sign.properties
+++ b/ant/self-sign.properties
@@ -19,7 +19,7 @@ jks.host=0.0.0.0
 
 jks.keystore=${jks.install}/auth/${project.filename}.jks
 jks.keytool=keytool
-jks.command=\\"${jks.keytool}\\" -genkey -noprompt -alias ${jks.alias} -keyalg RSA -keysize 2048 -dname \\"CN=${jks.cn}, EMAILADDRESS=${vendor.email}, OU=${jks.company}, O=${jks.company}, L=${jks.city}, S=${jks.state}, C=${jks.country}\\" -validity ${jks.validity} -keystore \\"${jks.keystore}\\" -storepass ${jks.storepass} -keypass ${jks.keypass} -ext san=dns:${jks.cnalt}
+jks.command=\\"${jks.keytool}\\" -genkey -noprompt -alias ${jks.alias} -keyalg RSA -keysize 2048 -dname \\"CN=${jks.cn}, EMAILADDRESS=${vendor.email}, OU=${jks.company}, O=${jks.company}, L=${jks.city}, S=${jks.state}, C=${jks.country}\\" -validity ${jks.validity} -keystore \\"${jks.keystore}\\" -storepass ${jks.storepass} -keypass ${jks.keypass} -ext san=dns:${jks.cn},dns:${jks.cnalt}
 
 der.cert=${jks.install}/auth/${project.filename}.crt
 der.command=\\"${jks.keytool}\\" -exportcert -alias ${jks.alias} -keystore \\"${jks.keystore}\\" -storepass ${jks.storepass} -keypass ${jks.keypass} -file \\"${der.cert}\\" -rfc
