--- a/build.xml
+++ b/build.xml
@@ -92,28 +92,43 @@
     </target>
 
     <!-- Get version information from git -->
-    <available file=".git" type="dir" property="git.present"/>
+    <property environment="env"/>
+    <available file="git" filepath="${env.PATH}" property="git.present"/>
 
     <target name="git.revision" description="Store git revision in ${repository.version}" if="git.present">
         <!-- http://stackoverflow.com/questions/2974106/how-to-lookup-the-latest-git-commit-hash-from-an-ant-build-script -->
-        <exec executable="git" outputproperty="git.revision" failifexecutionfails="false" errorproperty="">
+        <exec executable="git" outputproperty="git.revision" failifexecutionfails="false">
             <arg value="describe"/>
             <arg value="--tags"/>
             <arg value="--always"/>
             <arg value="HEAD"/>
         </exec>
-        <script language="javascript">
-            rev = project.getProperty('git.revision').trim() || "v0.0.0-0";
-            rev = rev.slice(1); // Remove 'v' prefix
-            rev = rev.split('-');
-            project.setProperty('git.lastTag', rev[0]);
-            project.setProperty('git.commitsSinceLastTag', rev[1]);
-            project.setProperty('build.version', rev[0]+"-"+rev[1]);
-        </script>
-        <echo>Version ${build.version}</echo>
     </target>
+    <target name="build.version" description="Store git revision in ${repository.version}" depends="git.revision">
+        <script language="javascript">
+            var rev = project.getProperty('git.revision');
+            var version;
+            if (rev) {
+                rev = rev.trim().slice(1); // Remove 'v' prefix
+                rev = rev.split('-');
+                project.setProperty('git.lastTag', rev[0]);
+                project.setProperty('git.commitsSinceLastTag', rev[1]);
 
-    <target name="constants.java" depends="git.revision" description="build Constants.java from template">
+                version = rev[0];
+                if (rev[1]) {
+                    version += "-" + rev[1];
+                }
+            } else {
+                version = project.getProperty('project.version');
+            }
+
+            project.setProperty('build.version', version);
+        </script>
+        <property name="build.version" value="${build.version}"/>
+        <echo message="Version ${build.version}"/>
+  </target>
+
+    <target name="constants.java" depends="build.version" description="build Constants.java from template">
         <copy file="src/qz/common/Constants.java.template" tofile="src/qz/common/Constants.java" overwrite="yes">
             <filterchain>
                 <expandproperties/>
