--- a/build.xml
+++ b/build.xml
@@ -28,9 +28,21 @@
     <target name="compile-socket" depends="init">
         <mkdir dir="${build.project.dir}"/>
 
+        <!-- find the pdfbox jar -->
+        <path id="find.jar">
+            <fileset dir="${lib.dir}/printing/">
+                <include name="pdfbox*.jar"/>
+            </fileset>
+        </path>
+        <property name="pdfbox.path" value="${toString:find.jar}" />
+
         <javac destdir="${build.project.dir}" source="${javac.source}" target="${javac.target}" includeantruntime="false" encoding="UTF-8">
             <src path="${src.dir}"/>
             <classpath>
+                <!-- prefer bouncycastle from pdfbox over simplersa -->
+                <path id="plugin.override">
+                    <pathelement path="${pdfbox.path}" />
+                </path>
                 <fileset dir="${lib.dir}">
                     <include name="**/*.jar"/>
                 </fileset>
