Fix SSL connections on Firefox 54+ Closes #200

--- a/ant/apple/apple.properties
+++ b/ant/apple/apple.properties
@@ -14,6 +14,7 @@ apple.keygen.store=trustRoot
 apple.keygen.name=apple-keygen.sh
 apple.keygen.in=${basedir}/ant/apple/${apple.keygen.name}.in
 apple.keygen.out=${dist.dir}/auth/${apple.keygen.name}
+apple.keygen.install=security add-trusted-cert -d -r \\"${apple.keygen.store}\\" -k \\"${apple.keychain}\\" \\"${ca.crt}\\"
 apple.jvmver=/usr/libexec/java_home -v ${javac.target}+
 apple.jvmcmd=${apple.jvmver} --exec
 apple.jvmfallback=/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home/bin
