--- a/ant/windows/windows.properties
+++ b/ant/windows/windows.properties
@@ -6,6 +6,8 @@ windows.keygen.name=windows-keygen.js
 windows.keygen.in=${basedir}/ant/windows/${windows.keygen.name}.in
 windows.keygen.out=${dist.dir}/auth/${windows.keygen.name}
 windows.keygen.tool=certutil.exe
+windows.keygen.install=${windows.keygen.tool} -addstore -f \\"${windows.keygen.store}\\" \\"${ca.crt}\\"
+windows.keygen.uninstall=${windows.keygen.tool} -delstore \\"${windows.keygen.store}\\" \\"!match\\"
 
 windows.nsis.addons=${basedir}/ant/windows/nsis
 windows.packager.in=${basedir}/ant/windows/windows-packager.nsi.in
